missing deploy files

--- a/deploy/App-uncompressed.html
+++ b/deploy/App-uncompressed.html
@@ -140,6 +140,7 @@
 						            align: 'stretch',
 						            padding: 5
 						        },
+						        height: 800,
 								padding: 5,
 								itemId: 'mainPanel',
 							});
