--- a/deploy/App-uncompressed.html
+++ b/deploy/App-uncompressed.html
@@ -71,11 +71,11 @@
         var mainPanel = Ext.create('Ext.panel.Panel', {
 			title: 'Releases Plan VS Actual',
 			layout: {
-	            type: 'hbox',
+	            type: 'vbox',
 	            align: 'stretch',
 	            padding: 5
 	        },
-	        height: 800,
+	        //height: 800,
 			padding: 5,
 			itemId: 'mainPanel',
 		});
@@ -129,12 +129,12 @@
 
 			listeners: {
 				load: function(store, data, success) {
-					console.log('Store:', store);
-					console.log('Data:', data);
+					//console.log('Store:', store);
+					//console.log('Data:', data);
 
 					var projectColumns = [];
 
-					var projectRows = [];
+					//var projectRows = [];
 
 					var columnNames = ['releaseName', 'iterationName'];
 
@@ -156,7 +156,7 @@
 								releases: []
 							};
 
-							projectRows[projectId] = project;
+							//projectRows[projectId] = project;
 
 							projectColumns.push({
 								xtype: 'gridcolumn',
@@ -190,7 +190,7 @@
 								])
 							});
 
-							console.log('releases', releases);
+							//console.log('releases', releases);
 
 							if (releases.initialCount > 0) {
 								//console.log('project', project, 'releases', releases);
@@ -199,11 +199,11 @@
 								var deferred = Ext.create('Deft.Deferred');
 								projects.push(deferred);
 
-								console.log('promised project:', project);
+								//console.log('promised project:', project);
 
 								this._loadReleases(project, releases, initDate, endDate).then({
 									success: function(records) {
-										console.log('Project', records);									
+										//console.log('Project', records);									
 										deferred.resolve(records);
 									},
 									failure: function(error) {
@@ -218,57 +218,47 @@
 
 					}, this);
 
-					Deft.Promise.all(projects).then({
-						success: function(records){
-							console.log('all projects:', projects);
+					Deft.Promise.all(projects).then( {
+						success: function(records) {
+							//console.log('all projects:', projects);
 
 							var rows = this._createReportRows(projects);
 
-							console.log('rows', rows);
+							//console.log('rows', rows);
 
-							//create grid:
-							//console.log('p col:', projectColumns);
-							//console.log('P data', projectData);
-
-							// var mainPanel = Ext.create('Ext.panel.Panel', {
-							// 	title: 'Releases Plan VS Actual',
-							// 	layout: {
-						 //            type: 'hbox',
-						 //            align: 'stretch',
-						 //            padding: 5
-						 //        },
-						 //        height: 800,
-							// 	padding: 5,
-							// 	itemId: 'mainPanel',
-							// });
-
-							var columns = [{
-								xtype: 'gridcolumn',
-								dataIndex: 'releaseName',
-								text: 'Release'
-							},
-							{
-								xtype: 'gridcolumn',
-								dataIndex: 'iterationName',
-								text: 'Iteration'
-							}];
-
-							columns.push.apply(columns,projectColumns);
-
-
-							var grid = Ext.create('Ext.grid.Panel', {
-								columns: columns,
-								flex: 1,
-								title: 'Projects',
-								store: {
-									fields: columnNames,
-									data: rows
-								}
-							});
 							this.down('#mainPanel').removeAll(true);
-							this.down('#mainPanel').add(grid);
-							// mainPanel.add(grid);
-							// this.add(mainPanel);
+
+							//for each release create a panel, then create a grid with all iterations
+							rows.eachKey(function(releaseName, iterationsMap) {
+								var columns = [{
+									xtype: 'gridcolumn',
+									dataIndex: 'iterationName',
+									text: 'Iteration',
+									width: 150
+								}];
+
+								columns.push.apply(columns,projectColumns);
+
+								var iterations = [];
+
+								iterationsMap.eachKey(function(iterationName, rows) {
+									iterations.push(rows);
+								});	
+
+								var grid = Ext.create('Ext.grid.Panel', {
+									columns: columns,
+									flex: 1,
+									title: 'Release: '+releaseName,
+									store: {
+										fields: columnNames,
+										data: iterations
+									}
+								});
+
+								this.down('#mainPanel').add(grid);							
+							}, 
+							this);
+							
 
 							this.myMask.hide();
 						},
@@ -346,15 +336,8 @@
 
 		}, this);
 
-		var iterations = [];
-
-		rows.eachKey(function(releaseName, iterationsMap) {
-			iterationsMap.eachKey(function(iterationName, rows) {
-				iterations.push(rows);
-			});			
-		});
-
-		return iterations;
+		//map  containing releases -> iterations
+		return rows;
 	},
 
 	_loadReleases: function(project, releases, initDate, endDate) {
@@ -371,10 +354,10 @@
 		releases.load({
 			callback: function(records, operation, success) {
 				var promises = [];
-				console.log('loading releases', records);
+				//console.log('loading releases', records);
 
 				Ext.Array.each(records, function(release) {
-					console.log('release: ', release);
+					//console.log('release: ', release);
 					//gather all iterations using start/end date and project ID
 					var startDateFilter = Ext.create('Rally.data.QueryFilter', {
 						property: 'StartDate',
@@ -412,7 +395,7 @@
 				} else {
 					Deft.Promise.all(promises).then({
 						success: function(results) {
-							console.log('results:', results);
+							//console.log('results:', results);
 							//Ext.Array.each(results, function(result) {
 								//console.log('project.releases', project.releases);
 
@@ -439,7 +422,7 @@
 
 	_loadIterations: function(release, filter) {
 		//console.log('Release', release);
-		console.log('loading iterations')
+		//console.log('loading iterations');
 
 		var deferred = Ext.create('Deft.Deferred');
 
