added a column for throughput, colored, fixed date range not including start date for release

--- a/deploy/App-uncompressed.html
+++ b/deploy/App-uncompressed.html
@@ -126,6 +126,7 @@
 			}],
 
 			fetch: ['Description', 'Name', 'ObjectID', 'Children', 'Releases', 'Iterations'],
+			limit: Infinity,
 
 			listeners: {
 				load: function(store, data, success) {
@@ -168,18 +169,30 @@
 								}, {
 									text: 'Actual',
 									dataIndex: 'actual-'+projectId
+								}, {
+									text: 'Throughput',
+									dataIndex: 'throughtput-'+projectId,
+									renderer : function(value, meta) {
+									    if(parseInt(value) >= 100) {
+									        meta.style = "background-color:#cdf9c2; color: #090";
+									    } else {
+									        meta.style = "background-color:#ffe2e2; color: #900";
+									    }
+									    return value;
+									}
 								}]
 							});
 
 							columnNames.push(projectName);
 							columnNames.push('plan-'+projectId);
 							columnNames.push('actual-'+projectId);
+							columnNames.push('throughtput-'+projectId);
 
 							var releases = record.getCollection('Releases',{
 								fetch: ['Name', 'ObjectID', 'Project', 'ReleaseStartDate', 'ReleaseDate', 'PlanEstimate'],
 								filters: Rally.data.QueryFilter.and([
 									{
-										property: 'StartDate',
+										property: 'ReleaseStartDate',
 										operator: '>=',
 										value: initDate
 									}, {
@@ -237,7 +250,7 @@
 									width: 150
 								}];
 
-								columns.push.apply(columns,projectColumns);
+								columns.push.apply(columns, projectColumns);
 
 								var iterations = [];
 
@@ -296,6 +309,7 @@
 					var iterationEndDate = iteration.endDate;
 					var plan = iteration.plan;
 					var actual = iteration.actual;
+					var throughtput = Math.round(plan / actual * 100);
 
 					var row = {
 						iterationId: iterationId,
@@ -309,6 +323,7 @@
 						iterations = new Ext.util.MixedCollection();
 						row['plan-'+projectId] = plan;
 						row['actual-'+projectId] = actual;
+						row['throughtput-'+projectId] = throughtput;
 
 						//console.log('adding a new row:', row);
 						iterations.add(iterationName, row);
@@ -320,6 +335,7 @@
 						if (!iterations.containsKey(iterationName)) {							
 							row['plan-'+projectId] = plan;
 							row['actual-'+projectId] = actual;
+							row['throughtput-'+projectId] = throughtput;
 
 							iterations.add(iterationName, row);
 						} else {
@@ -328,6 +344,7 @@
 							//console.log('updating row:', row);
 							rowlocal['plan-'+projectId] = plan;
 							rowlocal['actual-'+projectId] = actual;
+							rowlocal['throughtput-'+projectId] = throughtput;
 						}
 					}
 
@@ -429,8 +446,14 @@
 		Ext.create('Rally.data.wsapi.Store', {
 			model: 'Iteration',
 			fetch: true,
+			context: {
+				projectScopeUp: false,
+				projectScopeDown: true,
+				project: null //null to search all workspace
+			},
 			autoLoad: true,
 			filters: filter,
+			limit: Infinity,
 			sorters: [{
 				property: 'StartDate',
 				direction: 'ASC'
